[package]
name = "bittorrent"
version = "0.1.0"
authors = ["Mana <mana@eevee.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
bytes = "0.5.6"
futures = "0.3"
hyper = "0.13"
log = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_bencode = "^0.2.2"
sha-1 = "0.9.1"
stderrlog = "0.4.3"
tokio = { version = "0.2", features = ["full"] }