[package]
name = "animated-cli"
version = "0.1.0"
authors = ["mana"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "animated"
path = "src/cli.rs"

[dependencies]
common = { path = "../common" }

clap = { version = "3.0.0-beta.1", features = ["yaml"] }
bincode = "1.3.1"
log = "0.4.11"
prettytable-rs = "^0.8"
serde_json = "1.0"