[package]
name = "common"
version = "0.1.0"
authors = ["Mana <mana@eevee.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
whoami = "0.9.0"
rocksdb = "0.15.0"
notify = "4.0.12"
simple-signal = "1.1.1"