[package]
name = "animated-server"
version = "0.1.0"
authors = ["mana"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "animated-server"
path = "src/server.rs"

[dependencies]
common = { path = "../common" }

bincode = "1.3.1"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.15.0"
notify = "4.0.12"
log = "0.4.11"
stderrlog = "0.4.3"
simple-signal = "1.1.1"